2006-05-06  Brian Warner  <warner@lothar.com>

	* buildbot/process/step_twisted.py (Trial.setupEnvironment): more
	bugs in twisted-specific code not covered by my unit tests, this
	time use 'cmd' argument instead of self.cmd

	* buildbot/process/process_twisted.py (TwistedBuild.isFileImportant):
	fix stupid braino: either use startwith or find()==0, not both.
	(TwistedReactorsBuildFactory.__init__): another dumb typo

	* buildbot/test/test_slavecommand.py (ShellBase.testInterrupt1): 
	mark this test as TODO under windows, since process-killing seems
	dodgy there. We'll come back to this later and try to fix it
	properly.

	* buildbot/test/test_vc.py (CVSSupport.getdate): use localtime,
	and don't include a timezone
	(CVSSupport.vc_try_checkout): stop trying to strip the timezone.
	This should avoid the windows-with-verbose-timezone-name problem
	altogether.
	(Patch.testPatch): add a test which runs 'patch' with less
	overhead than the full VCBase.do_patch sequence, to try to isolate
	a windows test failure. This one uses slave.commands.ShellCommand
	and 'patch', but none of the VC code.

	* buildbot/slave/commands.py (getCommand): use which() to find the
	executables for 'cvs', 'svn', etc. This ought to help under
	windows.

	* buildbot/test/test_vc.py (VCBase.do_getpatch): Delete the
	working directory before starting. If an earlier test failed, the
	leftover directory would mistakenly flunk a later test.
	(ArchCommon.registerRepository): fix some tla-vs-baz problems.
	Make sure that we use the right commandlines if which("tla") picks
	up "tla.exe" (as it does under windows).
	(TlaSupport.do_get): factor out this tla-vs-baz difference
	(TlaSupport.vc_create): more tla-vs-baz differences

	* buildbot/test/test_slavecommand.py
	(ShellBase.testShellMissingCommand): stop trying to assert
	anything about the error message: different shells on different
	OSes with different languages makes it hard, and it really isn't
	that interesting of a thing to test anyway.
